# Herpa_BE_3

./: .dockerignore  .env.example  .gitignore  AGE_GROUP_422_FIX_REPORT.md  COMPOUND_QUERY_OPTIMIZATION_REPORT.md  Dockerfile  FINAL_AI_PERFORMANCE_IMPLEMENTATION_REPORT.md  HERBAL_AGENTIC_RECOMMENDATION_FACTUAL_UI_FIX_REPORT.md  HERBAL_RECOMMENDATION_QUALITY_FIX_REPORT.md  HERBAL_RECOMMENDATION_SAFETY_SCORING_FIX_REPORT.md  HERBAL_RECOMMENDATION_TIMEOUT_FIX_REPORT.md  HERBAL_RECOMMENDATION_V3_PERFORMANCE_SCORING_DETAIL_REPORT.md  HERPA_NEO4J_ENRICHMENT_V2_INTEGRATION_REPORT.md  IMPLEMENTATION_REPORT.md  MODEL_MODES_IMPLEMENTATION_REPORT.md  Makefile  NEO4J_DATETIME_SERIALIZATION_FIX_REPORT.md  NEO4J_SCHEMA_FIX_IMPLEMENTATION_REPORT.md  PERFORMANCE_OPTIMIZATION_IMPLEMENTATION_REPORT.md  README.md  RUNTIME_ERROR_FIX_IMPLEMENTATION_REPORT.md  docker-compose.gpu.yml  docker-compose.yml  eval_ragas_local.py  evaluate.py  hasil_evaluasi_herpa_local.csv  pyproject.toml
app/: main.py
benchmarks/: compound_queries_latest.csv  compound_queries_latest.json
data_pipeline/: ingest_neo4j.py  seed_quiz.py  verify_graph.py
docs/: adaptive_thinking_high.md  agent_flow.md  alisa_architecture_review.md  api_contract.md  architecture.md  assumptions.md  backend_enrichment_query_contract.md  backend_implementation_plan.md  benchmark_after.json  benchmark_before.json  chat_performance.md  compound_normalization.md  context_budgeting.md  deployment.md  direct_answer_architecture.md  direct_answer_engine.md  docker_setup.md  endpoint_inventory.md  file_manifest.sha256  final_tree.txt  (+64 more)
(+244 files in other folders)
