[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "herpa-agentic-graphrag-backend"
version = "0.1.0"
description = "Agentic AI and GraphRAG backend for HERPA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "email-validator>=2.2,<3",
  "httpx>=0.27,<1",
  "PyJWT[crypto]>=2.9,<3",
  "neo4j>=5.25,<6",
  "minio>=7.2,<8",
  "python-multipart>=0.0.12,<1",
  "pymupdf>=1.24,<2",
  "python-docx>=1.1,<2",
  "openpyxl>=3.1,<4",
  "filetype>=1.2,<2",
  "orjson>=3.10,<4",
  "tenacity>=9,<10",
  "ragas>=0.2,<1",
  "datasets>=3,<4",
  "langchain-openai>=0.3,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-env>=1.1,<2",
  "respx>=0.21,<1",
  "ruff>=0.8,<1",
  "mypy>=1.13,<2"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
    "APP_ENV=test",
    "ALLOW_MOCK_SERVICES=true",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["F", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = false
no_implicit_optional = true
ignore_missing_imports = true
